maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:30: error: value unary_! is not a member of Unit
        if(!aMurEst(x,y)){
           ^JediEscaper:35: error: value unary_! is not a member of Unit
        if(!aMurSud(x,y)){
           ^JediEscaper:54: error: not found: value t
t = Array[Direction](4)
^JediEscaper:55: error: not found: value t
t(0)=Direction.NORTH
^JediEscaper:56: error: not found: value t
t(1)=Direction.EAST 
^JediEscaper:57: error: not found: value t
t(2)=Direction.SOUTH  
^JediEscaper:58: error: not found: value t
t(3)=Direction.WEST 
^JediEscaper:63: error: not found: value t
  setDirection(t(0))
               ^JediEscaper:67: error: not found: value numcases
    numcases(0)=Integer.MAX_VALUE
    ^JediEscaper:69: error: not found: value t
  setDirection(t(1))
               ^JediEscaper:73: error: not found: value numcases
    numcases(1)=Integer.MAX_VALUE
    ^JediEscaper:75: error: not found: value t
  setDirection(t(2))
               ^JediEscaper:79: error: not found: value numcases
    numcases(2)=Integer.MAX_VALUE
    ^JediEscaper:81: error: not found: value t
  setDirection(t(3))
               ^JediEscaper:85: error: not found: value numcases
    numcases(3)=Integer.MAX_VALUE
    ^JediEscaper:87: error: value MAX_Value is not a member of object Integer
  var min=Integer.MAX_Value
                  ^JediEscaper:95: error: not found: value t
  setDirection(t(indiceMin()))
               ^JediEscaper:95: error: Int does not take parameters
  setDirection(t(indiceMin()))
                          ^JediEscaper:105: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^JediEscaper:105: warning: enclosing method aMurEst has result type Unit: return value discarded
    return true
    ^JediEscaper:107: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^JediEscaper:107: warning: enclosing method aMurEst has result type Unit: return value discarded
    return true
    ^JediEscaper:109: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^JediEscaper:109: warning: enclosing method aMurEst has result type Unit: return value discarded
    return false
    ^JediEscaper:115: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^JediEscaper:115: warning: enclosing method aMurSud has result type Unit: return value discarded
    return true
    ^JediEscaper:117: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^JediEscaper:117: warning: enclosing method aMurSud has result type Unit: return value discarded
    return true
    ^JediEscaper:119: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^JediEscaper:119: warning: enclosing method aMurSud has result type Unit: return value discarded
    return false
    ^